# app2-Plus

./: .env.example  .env.production  .gitignore  ACCEPTANCE_CRITERIA.md  ANDROID_BUILD_GUIDE.md  OFFLINE_FIRST_SYSTEM.md  OFFLINE_SYNC_PLAN.md  TECHNICAL_STANDARDS.md  agent_bridge.py  capacitor.config.json  design_guidelines.md  drizzle.config.ts  ecosystem.config.cjs  firestore.indexes.json  google-services.json  package-lock.json  package.json  pg_cert.pem  playwright.config.ts  pyproject.toml  replit.md  run-monitoring.sh  vite.config.ts  كشف ابار الجراحي.xlsx
.migration_workspace/: tasks.md
.work/: CLEANUP_AUDIT_REPORT.md  COMPLETION_REPORT.md  CURRENT_STATUS.md  FILE_CLEANUP_STANDARD.md  FINAL_SUMMARY.md  INDEX.md  PHASE_2_SUMMARY.md  PHASE_3_SUMMARY.md  PHASE_4_SUMMARY.md  PHASE_5_SUMMARY.md  ROADMAP.md
client/: index.html
dev_system/: INTEGRATION_PLAN.md  STANDARDS.md
migration_workspace/: HANDOVER_PROTOCOL.md  MIGRATION_PLAN.md  NOSQL_SCHEMA_MAPPING.md  STANDARDS_AND_QA.md
migrations/: 0000_complete_schema_migration.sql
scripts/: build-and-deploy.sh  db-init.sh  deploy_via_git.sh  migrate-to-firebase.ts  push_repo.sh  sync-version.js
server/: FirebaseStorage.ts  add-email-verified-column.ts  auto-backup-scheduler.ts  auto-schema-push.ts  backup-manager.ts  create-admin-user.ts  create-notification-tables.ts  create-security-policies-tables.ts  database-manager.ts  database-performance-analyzer.ts  db.ts  errors.ts  firebase-storage.ts  fix-attendance-wages.ts  fix-material-category-missing.ts  fix-material-category.ts  fix-users-table-columns.ts  (+9 more)
(+237 files in other folders)
